[package]
name = "pal-occupy-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shuttle"

[[bin]]
name = "main"

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.36", features = ["serde", "now"] }
once_cell = "1.19.0"
poise = "0.6.1"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.4", features = ["chrono"] }
tokio = "1.36.0"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
